# hotel_agent

./: .env.example  .env.production.template  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: guest-booking.spec.ts  (+1 more)
frontend/: package-lock.json  package.json  vitest.config.ts
frontend-staff/: index.html  package-lock.json  package.json  vitest.config.ts
scripts/: generate_keys.sh  setup-server.sh
services/auth/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
services/auth/alembic/: env.py
services/auth/alembic/versions/: 001_initial_auth_models.py
services/auth/app/: main.py
services/auth/app/api/: deps.py
services/auth/app/api/v1/: auth.py  invite.py  users.py
services/auth/app/core/: config.py  database.py  security.py
services/auth/app/models/: __init__.py  token.py  user.py
services/auth/app/schemas/: auth.py  user.py
services/auth/app/services/: auth.py  email.py  invite.py  password_reset.py  seed_guests.py  user.py
services/auth/app/templates/email/: password_reset.html  staff_invite.html
services/auth/tests/: conftest.py  test_roles.py
services/gateway/: Dockerfile  pyproject.toml  requirements.txt
services/gateway/app/: main.py
services/gateway/app/api/: booking.py  proxy.py  reports.py  search.py  staff.py
services/gateway/app/core/: config.py
services/gateway/tests/: conftest.py
services/room/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
services/room/alembic/: env.py
services/room/alembic/versions/: 001_initial_room_models.py  002_reservation_projection.py
services/room/app/: main.py
services/room/app/api/: deps.py
services/room/app/api/v1/: rates.py  reports.py  room_types.py  rooms.py  search.py
services/room/app/core/: config.py  database.py  storage.py
services/room/app/models/: __init__.py  rate.py  reservation.py  room.py  room_type.py  status_log.py
services/room/app/schemas/: __init__.py  availability.py  rate.py  room.py  room_type.py
services/room/app/services/: availability.py  event_consumer.py  rate.py  room.py  room_type.py  seed.py  storage.py
services/room/tests/: conftest.py  test_availability.py  test_calendar.py  test_event_consumer.py  test_pricing.py  test_room_types.py  test_rooms.py  test_search.py
shared/: pyproject.toml
shared/shared/: database.py  jwt.py  messaging.py
shared/shared/schemas/: user.py
tests/: README.md  conftest.py
(+396 files in other folders)
