[project]
name = "hotelbook-auth"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg",
    "alembic>=1.18.0",
    "pydantic-settings>=2.0",
    "httpx",
    "pwdlib[argon2]>=0.3.0",
    "PyJWT[crypto]>=2.12.0",
    "fastapi-mail>=1.6.0",
    "aio-pika>=9.6.0",
    "hotelbook-shared",
]

[tool.uv.sources]
hotelbook-shared = { path = "../../shared" }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx",
    "aiosqlite",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
